--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "emailjs-com": "^3.0.2",
+    "file-saver": "^2.0.5",
     "firebase": "^8.9.1",
     "prop-types": "^15.7.2",
     "re-base": "^4.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
+    "react-download-link": "^2.3.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
